--- a/PianoApp/PianoApp/Views/MainWindow.xaml
+++ b/PianoApp/PianoApp/Views/MainWindow.xaml
@@ -5,13 +5,5 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PianoApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid Name="main">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="4*"/>
-            <RowDefinition Height="2*"/>
-        </Grid.RowDefinitions>
-    </Grid>
+        Title="MainWindow" Height="Auto" Width="Auto">
 </Window>
