--- a/PianoApp/PianoApp/Views/MusicChooseView.xaml
+++ b/PianoApp/PianoApp/Views/MusicChooseView.xaml
@@ -15,7 +15,7 @@
         </Grid.ColumnDefinitions>
         <TabControl Margin="0,69,270,10" Grid.Column="1">
             <TabItem Header="Sheet music">
-                <DataGrid x:Name="SheetMusic" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" SelectionMode="Single" SelectionChanged="DataGrid_SelectionChanged">
+                <DataGrid x:Name="SheetMusic" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" SelectionMode="Single" SelectionChanged="DataGrid_SelectionChanged">
                     <DataGrid.Columns>
                         <DataGridTextColumn Width="200" Header="Title" Binding="{Binding Title}"/>
                         <DataGridTextColumn Width="200" Header="Description"  Binding="{Binding Description}"/>
@@ -25,7 +25,11 @@
                 </DataGrid>
             </TabItem>
         </TabControl>
-        <Label Content="Choose a piece of music" Grid.Column="1" HorizontalAlignment="Left" Margin="10,38,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="select" Content="Choose piece of music" Grid.Column="1" HorizontalAlignment="Left" Margin="508,536,0,0" VerticalAlignment="Top" Width="243" Height="50" Click="OnSelectClick"/>
+        <Label FontSize="20" FontWeight="DemiBold" Content="Choose a piece of music" HorizontalAlignment="Left" Margin="21,10,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Button FontSize="16" x:Name="select" Content="Choose piece of music" Grid.Column="1" HorizontalAlignment="Left" Margin="508,536,0,0" VerticalAlignment="Top" Width="243" Height="50" Click="OnSelectClick"/>
+        <Label Content="Title" FontSize="14" FontWeight="DemiBold" HorizontalContentAlignment="Center" Grid.Column="1" HorizontalAlignment="Left" Margin="507.667,69,0,0" VerticalAlignment="Top" Width="242"/>
+        <TextBox x:Name="titleBox" IsReadOnly="True" Grid.Column="1" HorizontalAlignment="Left" Height="21" Margin="507.667,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="242"/>
+        <Label Content="Description" FontSize="14" FontWeight="DemiBold" HorizontalContentAlignment="Center" Grid.Column="1" HorizontalAlignment="Left" Margin="507.667,126,0,0" VerticalAlignment="Top" Width="242"/>
+        <TextBox x:Name="descBox" IsReadOnly="True" Grid.Column="1" HorizontalAlignment="Left" Height="200" Margin="507.667,160,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="242"/>
     </Grid>
 </Window>
