Revert "Lessen + niveau tabs added"
This reverts commit 048991ab31173fe7c7e313c0afab14da1a4e7b3e.

--- a/PianoApp/PianoApp/Views/MusicChooseView.xaml
+++ b/PianoApp/PianoApp/Views/MusicChooseView.xaml
@@ -29,76 +29,9 @@
                     </DataGrid.Columns>
                 </DataGrid>
             </TabItem>
-
-
-            <TabItem Header="Lessen">
-                <TabControl Margin="0,0,0,0" Grid.Column="1">
-                    <TabItem Header="Beginner">
-                        <DataGrid x:Name="Beginner" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserResizeColumns="False" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" SelectionMode="Single" SelectionChanged="SheetMusic_SelectionChanged">
-                            <DataGrid.RowStyle>
-                                <Style>
-                                    <EventSetter Event="DataGridRow.MouseDoubleClick" Handler="SheetMusic_MouseDoubleClick"/>
-                                </Style>
-                            </DataGrid.RowStyle>
-                            <DataGrid.Columns>
-                                <DataGridTextColumn Width="400" Header="Title" Binding="{Binding Title}"/>
-                                <DataGridTextColumn Width="80" Header="Adding Date"  Binding="{Binding Date}"/>
-                                <DataGridTextColumn Header="Location" Visibility="Hidden" Binding="{Binding Location}"/>
-                                <DataGridTextColumn Header="Id" Visibility="Hidden" Binding="{Binding Id}"/>
-                            </DataGrid.Columns>
-                        </DataGrid>
-                    </TabItem>
-                    <TabItem Header="Middelmatig">
-                        <DataGrid x:Name="Middelmatig" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserResizeColumns="False" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" SelectionMode="Single" SelectionChanged="SheetMusic_SelectionChanged">
-                            <DataGrid.RowStyle>
-                                <Style>
-                                    <EventSetter Event="DataGridRow.MouseDoubleClick" Handler="SheetMusic_MouseDoubleClick"/>
-                                </Style>
-                            </DataGrid.RowStyle>
-                            <DataGrid.Columns>
-                                <DataGridTextColumn Width="400" Header="Title" Binding="{Binding Title}"/>
-                                <DataGridTextColumn Width="80" Header="Adding Date"  Binding="{Binding Date}"/>
-                                <DataGridTextColumn Header="Location" Visibility="Hidden" Binding="{Binding Location}"/>
-                                <DataGridTextColumn Header="Id" Visibility="Hidden" Binding="{Binding Id}"/>
-                            </DataGrid.Columns>
-                        </DataGrid>
-                    </TabItem>
-                    <TabItem Header="Gevorderd">
-                        <DataGrid x:Name="Gevorderd" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserResizeColumns="False" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" SelectionMode="Single" SelectionChanged="SheetMusic_SelectionChanged">
-                            <DataGrid.RowStyle>
-                                <Style>
-                                    <EventSetter Event="DataGridRow.MouseDoubleClick" Handler="SheetMusic_MouseDoubleClick"/>
-                                </Style>
-                            </DataGrid.RowStyle>
-                            <DataGrid.Columns>
-                                <DataGridTextColumn Width="400" Header="Title" Binding="{Binding Title}"/>
-                                <DataGridTextColumn Width="80" Header="Adding Date"  Binding="{Binding Date}"/>
-                                <DataGridTextColumn Header="Location" Visibility="Hidden" Binding="{Binding Location}"/>
-                                <DataGridTextColumn Header="Id" Visibility="Hidden" Binding="{Binding Id}"/>
-                            </DataGrid.Columns>
-                        </DataGrid>
-                    </TabItem>
-                    <TabItem Header="Expert">
-                        <DataGrid x:Name="Expert" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserResizeColumns="False" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" SelectionMode="Single" SelectionChanged="SheetMusic_SelectionChanged">
-                            <DataGrid.RowStyle>
-                                <Style>
-                                    <EventSetter Event="DataGridRow.MouseDoubleClick" Handler="SheetMusic_MouseDoubleClick"/>
-                                </Style>
-                            </DataGrid.RowStyle>
-                            <DataGrid.Columns>
-                                <DataGridTextColumn Width="400" Header="Title" Binding="{Binding Title}"/>
-                                <DataGridTextColumn Width="80" Header="Adding Date"  Binding="{Binding Date}"/>
-                                <DataGridTextColumn Header="Location" Visibility="Hidden" Binding="{Binding Location}"/>
-                                <DataGridTextColumn Header="Id" Visibility="Hidden" Binding="{Binding Id}"/>
-                            </DataGrid.Columns>
-                        </DataGrid>
-                    </TabItem>
-                </TabControl>
-
-            </TabItem>
         </TabControl>
-        <Label FontSize="20" FontWeight="DemiBold" Content="Choose a musicpiece" HorizontalAlignment="Left" Margin="21,10,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-        <Button FontSize="16" x:Name="select" Content="Choose musicpiece" Grid.Column="1" HorizontalAlignment="Left" Margin="508,536,0,0" VerticalAlignment="Top" Width="243" Height="50" Click="OnSelectClick"/>
+        <Label FontSize="20" FontWeight="DemiBold" Content="Choose a piece of music" HorizontalAlignment="Left" Margin="21,10,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Button FontSize="16" x:Name="select" Content="Choose piece of music" Grid.Column="1" HorizontalAlignment="Left" Margin="508,536,0,0" VerticalAlignment="Top" Width="243" Height="50" Click="OnSelectClick"/>
         <Label Content="Title" FontSize="14" FontWeight="DemiBold" HorizontalContentAlignment="Center" Grid.Column="1" HorizontalAlignment="Left" Margin="507.667,69,0,0" VerticalAlignment="Top" Width="242"/>
         <TextBox x:Name="titleBox" IsReadOnly="True" Grid.Column="1" HorizontalAlignment="Left" Height="21" Margin="507.667,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="242"/>
         <Label Content="Description" FontSize="14" FontWeight="DemiBold" HorizontalContentAlignment="Center" Grid.Column="1" HorizontalAlignment="Left" Margin="507.667,126,0,0" VerticalAlignment="Top" Width="242"/>
@@ -106,7 +39,7 @@
         <TextBox x:Name="SearchTerm" Grid.Column="1" HorizontalAlignment="Left" Height="19" Margin="332.2,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="169" TextChanged="SearchTerm_TextChanged"/>
         <Label Content="Search" Grid.Column="1" HorizontalAlignment="Left" Margin="284.2,66,0,0" VerticalAlignment="Top" Width="48" Height="25"/>
 
-        <Label Content="Scoreboard" FontSize="14" FontWeight="DemiBold" HorizontalContentAlignment="Center" Grid.Column="1" HorizontalAlignment="Left" Margin="503.2,313,0,0" VerticalAlignment="Top" Width="242"/>
+        <Label Content="Top 5 attempts" FontSize="14" FontWeight="DemiBold" HorizontalContentAlignment="Center" Grid.Column="1" HorizontalAlignment="Left" Margin="503.2,313,0,0" VerticalAlignment="Top" Width="242"/>
         <DataGrid Name="ScoreGrid" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserResizeColumns="False" AutoGenerateColumns="False" IsReadOnly="True" Grid.Column="1" HorizontalAlignment="Left" Height="174" Margin="508.2,347,0,0" VerticalAlignment="Top" Width="241">
             <DataGrid.Columns>
                 <DataGridTextColumn  Width="65" Binding="{Binding Date}" IsReadOnly="True" Header="Date"/>
