--- a/PianoApp/PianoApp/Views/MusicChooseView.xaml
+++ b/PianoApp/PianoApp/Views/MusicChooseView.xaml
@@ -13,6 +13,7 @@
             <ColumnDefinition Width="7*"/>
             <ColumnDefinition Width="257*"/>
         </Grid.ColumnDefinitions>
+        
         <TabControl Margin="0,69,270,10" Grid.Column="1">
             <TabItem Header="Sheet music">
                 <DataGrid x:Name="SheetMusic" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserResizeColumns="False" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" SelectionMode="Single" SelectionChanged="SheetMusic_SelectionChanged">
@@ -29,7 +30,73 @@
                     </DataGrid.Columns>
                 </DataGrid>
             </TabItem>
+            <TabItem Header="Lessen">
+                <TabControl Margin="0,0,0,0" Grid.Column="1">
+                    <TabItem Header="Beginner">
+                        <DataGrid x:Name="Beginner" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserResizeColumns="False" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" SelectionMode="Single" SelectionChanged="SheetMusic_SelectionChanged">
+                            <DataGrid.RowStyle>
+                                <Style>
+                                    <EventSetter Event="DataGridRow.MouseDoubleClick" Handler="SheetMusic_MouseDoubleClick"/>
+                                </Style>
+                            </DataGrid.RowStyle>
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Width="400" Header="Title" Binding="{Binding Title}"/>
+                                <DataGridTextColumn Width="80" Header="Adding Date"  Binding="{Binding Date}"/>
+                                <DataGridTextColumn Header="Location" Visibility="Hidden" Binding="{Binding Location}"/>
+                                <DataGridTextColumn Header="Id" Visibility="Hidden" Binding="{Binding Id}"/>
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </TabItem>
+                    <TabItem Header="Middelmatig">
+                        <DataGrid x:Name="Middelmatig" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserResizeColumns="False" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" SelectionMode="Single" SelectionChanged="SheetMusic_SelectionChanged">
+                            <DataGrid.RowStyle>
+                                <Style>
+                                    <EventSetter Event="DataGridRow.MouseDoubleClick" Handler="SheetMusic_MouseDoubleClick"/>
+                                </Style>
+                            </DataGrid.RowStyle>
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Width="400" Header="Title" Binding="{Binding Title}"/>
+                                <DataGridTextColumn Width="80" Header="Adding Date"  Binding="{Binding Date}"/>
+                                <DataGridTextColumn Header="Location" Visibility="Hidden" Binding="{Binding Location}"/>
+                                <DataGridTextColumn Header="Id" Visibility="Hidden" Binding="{Binding Id}"/>
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </TabItem>
+                    <TabItem Header="Gevorderd">
+                        <DataGrid x:Name="Gevorderd" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserResizeColumns="False" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" SelectionMode="Single" SelectionChanged="SheetMusic_SelectionChanged">
+                            <DataGrid.RowStyle>
+                                <Style>
+                                    <EventSetter Event="DataGridRow.MouseDoubleClick" Handler="SheetMusic_MouseDoubleClick"/>
+                                </Style>
+                            </DataGrid.RowStyle>
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Width="400" Header="Title" Binding="{Binding Title}"/>
+                                <DataGridTextColumn Width="80" Header="Adding Date"  Binding="{Binding Date}"/>
+                                <DataGridTextColumn Header="Location" Visibility="Hidden" Binding="{Binding Location}"/>
+                                <DataGridTextColumn Header="Id" Visibility="Hidden" Binding="{Binding Id}"/>
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </TabItem>
+                    <TabItem Header="Expert">
+                        <DataGrid x:Name="Expert" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserResizeColumns="False" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" SelectionMode="Single" SelectionChanged="SheetMusic_SelectionChanged">
+                            <DataGrid.RowStyle>
+                                <Style>
+                                    <EventSetter Event="DataGridRow.MouseDoubleClick" Handler="SheetMusic_MouseDoubleClick"/>
+                                </Style>
+                            </DataGrid.RowStyle>
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Width="400" Header="Title" Binding="{Binding Title}"/>
+                                <DataGridTextColumn Width="80" Header="Adding Date"  Binding="{Binding Date}"/>
+                                <DataGridTextColumn Header="Location" Visibility="Hidden" Binding="{Binding Location}"/>
+                                <DataGridTextColumn Header="Id" Visibility="Hidden" Binding="{Binding Id}"/>
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </TabItem>
+                </TabControl>
+            </TabItem>
+            
         </TabControl>
+        
         <Label FontSize="20" FontWeight="DemiBold" Content="Choose a piece of music" HorizontalAlignment="Left" Margin="21,10,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
         <Button FontSize="16" x:Name="select" Content="Choose piece of music" Grid.Column="1" HorizontalAlignment="Left" Margin="508,536,0,0" VerticalAlignment="Top" Width="243" Height="50" Click="OnSelectClick"/>
         <Label Content="Title" FontSize="14" FontWeight="DemiBold" HorizontalContentAlignment="Center" Grid.Column="1" HorizontalAlignment="Left" Margin="507.667,69,0,0" VerticalAlignment="Top" Width="242"/>
