--- a/PianoApp/PianoApp/Views/IntroductionView.xaml
+++ b/PianoApp/PianoApp/Views/IntroductionView.xaml
@@ -106,7 +106,7 @@
                     </Grid>
                 </TabItem>
                 
-                <TabItem Header="Uitleg vingerzetting/handzetting" >
+                <TabItem Header="Uitleg applicatie" >
                     <Grid ShowGridLines="False">
                         <Grid.ColumnDefinitions>
                         </Grid.ColumnDefinitions>
@@ -116,6 +116,9 @@
                             <RowDefinition Height="Auto"></RowDefinition>
                             <RowDefinition  Height="Auto"></RowDefinition>
                             <RowDefinition  Height="Auto"></RowDefinition>
+                            <RowDefinition  Height="Auto"></RowDefinition>
+                            <RowDefinition  Height="Auto"></RowDefinition>
+
                         </Grid.RowDefinitions>
                         <Border Margin="0,0,0,10" Grid.Row="0" BorderThickness="0,0,0,1" BorderBrush="Black">
                             <TextBlock Margin="0,0,0,10" FontWeight="Bold" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Left">
@@ -144,6 +147,42 @@
                                 Wanneer de pianotoets <TextBlock Foreground="Purple">paars</TextBlock> oplicht, betekent dit dat de linkerhand gebruikt moet worden.
                                 <LineBreak/>
                                 Wanneer de pianotoets <TextBlock Foreground="Blue">blauw</TextBlock> oplicht, betekent dit dat de rechterhand gebruikt moet worden.
+                            </TextBlock>
+                        </Border>
+                        <TextBlock Margin="0,0,0,5" FontWeight="Bold" Grid.Row="1" FontSize="14">           
+                            1.3 Vingerzetting
+                        </TextBlock>
+                        <Border Margin="0,0,0,10" Grid.Row="2" BorderThickness="0,0,0,1" BorderBrush="Black">
+                            <TextBlock Margin="0,0,0,10" FontSize="14">           
+                            Wanneer er bij een muziekstuk vingerzetting is aangegeven, wordt dit laten zien bij een noot. In dit geval is er boven de <LineBreak/>
+                            noot een nummer zichtbaar. Dit geeft de nummerzetting weer. 
+                            <LineBreak/> Ook is hetzelfde nummer zichtbaar op de toets van de piano.
+                            <LineBreak/>
+                            <Image Height="200" Source="pack://application:,,,/Images/vingerzetting.png"
+                                />
+                            </TextBlock>
+                        </Border>
+                        <TextBlock Margin="0,0,0,5" FontWeight="Bold" Grid.Row="3" FontSize="14">           
+                            1.2 Verschillende kleur per hand
+                        </TextBlock>
+                        <Border Grid.Row="4" Margin="0,0,0,10" BorderThickness="0,0,0,1" BorderBrush="Black">
+                            <TextBlock Margin="0,0,0,10" FontSize="14">           
+                                Tijdens het spelen van een muziekstuk worden de noten en pianotoetsen een kleur gegeven.  <LineBreak/>
+                                Wanneer de pianotoets <TextBlock Foreground="Purple">paars</TextBlock> oplicht, betekent dit dat de linkerhand gebruikt moet worden.
+                                <LineBreak/>
+                                Wanneer de pianotoets <TextBlock Foreground="Blue">blauw</TextBlock> oplicht, betekent dit dat de rechterhand gebruikt moet worden.
+                            </TextBlock>
+                        </Border>
+                        <TextBlock Margin="0,0,0,5" FontWeight="Bold" Grid.Row="5" FontSize="14">           
+                            1.3 Uitleg score
+                        </TextBlock>
+                        <Border Grid.Row="6" Margin="0,0,0,10" BorderThickness="0,0,0,1" BorderBrush="Black">
+                            <TextBlock Margin="0,0,0,10" FontSize="14">           
+                                Wanneer je klaar bent met het spelen van een stuk komt een score in beeld, <LineBreak/>
+                                deze score is een percentage van het aantal noten dat je goed hebt gespeeld. <LineBreak/>
+                                Bijvoorbeeld: wanneer je een stuk hebt van 100 noten, en je speelt er 80 goed. Dan heb je een score van 80
+                                <LineBreak/><LineBreak/>
+                                Deze score wordt opgeslagen. Wanneer je opnieuw een muziekstuk kiest is de top 5 score van een muziekstuk zichtbaar.
                             </TextBlock>
                         </Border>
                     </Grid>
