--- a/PianoApp/PianoApp/Views/MusicChooseView.xaml
+++ b/PianoApp/PianoApp/Views/MusicChooseView.xaml
@@ -116,6 +116,6 @@
         </DataGrid>
         <Button Name ="OpenFileBtn" Content="Open File" Grid.Column="1" HorizontalAlignment="Left" Margin="674.2,32,0,0" VerticalAlignment="Top" Width="75" Click="AddButton_Click"/>
         <Label Grid.Column="1" Name="txtEditor" HorizontalAlignment="Left" Height="36" Margin="332.2,28,0,0" Content="" VerticalAlignment="Top" Width="336"/>
-
+        <Button Content="Delete" Visibility="Hidden" Name="DeleteBtn" Grid.Column="1" HorizontalAlignment="Left" Margin="508.2,72,0,0" VerticalAlignment="Top" Width="75" Click="DeleteBtn_Click"/>
     </Grid>
 </Window>
